syntax = "proto3";
package ojo.gmp.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "ojo/gmp/v1/gmp.proto";

option go_package = "github.com/ojo-network/ojo/x/gmp/types";

// Query defines the gRPC querier service for the gmp module
service Query {
  // Params queries all parameters.
  rpc Params(ParamsRequest) returns (ParamsResponse) {
    option (google.api.http).get = "/ojo/gmp/v1/params";
  }

  rpc AllPayments(AllPaymentsRequest) returns (AllPaymentsResponse) {
    option (google.api.http).get = "/ojo/gmp/v1/all_payments";
  }
}

// ParamsRequest is the request type for the Query/Params RPC method.
message ParamsRequest {}

// ParamsResponse is the response type for the Query/Params RPC method.
message ParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message AllPaymentsRequest {}

message AllPaymentsResponse {
  repeated Payment payments = 1 [(gogoproto.nullable) = false];
}
